fix overflow y

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -102,7 +102,8 @@ main {
 #prices {
     width: 100%;
 
-    padding: 4vh 20vw 4vh 20vw;
+    padding-top: 4vh;
+    padding-bottom: 4vh;
 
     background: linear-gradient(rgba(255, 255, 255, -4), rgba(50,50,50,0.7) ); 
 
